--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "svelte-retag",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "\"Light\" DOM custom element wrapper for Svelte 3 with Vite HMR support",
   "main": "index.js",
   "scripts": {
-    "test": "vitest run"
+    "test": "vitest run",
+    "eslint": "eslint index.js tests/*",
+    "pub": "npm run test && npm run eslint && npm publish"
   },
   "repository": {
     "type": "git",
@@ -14,6 +16,7 @@
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
     "eslint": "^8.42.0",
+    "eslint-plugin-svelte": "^2.30.0",
     "jsdom": "^22.1.0",
     "svelte": "^3.54.0",
     "vite": "^4.3.0",
