Some quick demos showing custom elements, slots (default and named) as well as nesting. Compiled both to ESM + IIFE.

--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp iife.html dist/",
     "preview": "vite preview"
   },
   "devDependencies": {
