--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build && cp iife.html dist/",
+    "build": "rm -rf dist/ && vite build && VITE_BUILD_FORMAT=iife yarn vite build && cp iife.html dist/",
     "preview": "vite preview"
   },
   "devDependencies": {
