--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-retag",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Light DOM custom element wrapper for Svelte 3 and 4 with slots, context and Vite HMR support",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,7 @@
     "url": "git+ssh://git@github.com/patricknelson/svelte-retag.git"
   },
   "peerDependencies": {
-    "svelte": "^3.19.0 || ^4.0.0-next.0"
+    "svelte": "^3.19.0 || ^4.0.0"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^2.0.0",
