--- a/demo/vercel/package.json
+++ b/demo/vercel/package.json
@@ -10,8 +10,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.4.6",
-    "svelte": "^4.0.5",
-    "vite": "^4.3.0"
+    "@sveltejs/vite-plugin-svelte": "^3.0.0-next.3",
+    "svelte": "^5.0.0-next.14"
   }
 }
