--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.3.7",
   "description": "Light DOM custom element wrapper for Svelte 3 and 4 with slots, context and Vite HMR support",
   "main": "index.js",
+  "types": "./types/index.d.ts",
   "scripts": {
     "test": "npm run eslint && vitest run",
     "vitest": "vitest run",
     "eslint": "eslint index.js tests/*",
-    "pub": "npm run test && npm run eslint && npm publish"
+    "build": "tsc --emitDeclarationOnly",
+    "pub": "npm run test && npm run eslint && npm run build && npm publish"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,7 @@
     "eslint-plugin-svelte": "^2.30.0",
     "jsdom": "^22.1.0",
     "svelte": "^4.0.5",
+    "typescript": "^5.3.2",
     "vite": "^4.3.0",
     "vitest": "^0.25.3"
   },
