--- a/demo/hello-world/package.json
+++ b/demo/hello-world/package.json
@@ -10,10 +10,10 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "svelte": "^4.2.3",
-    "vite": "^5.0.5"
+    "svelte": "^4.0.0",
+    "vite": "^5.0.0"
   },
   "dependencies": {
-    "svelte-retag": "^1.3.2"
+    "svelte-retag": "latest"
   }
 }
