Moving the Vercel demo to facilitate a better dev workflow for the iife compilation format. Including yarn.lock and excluding package-lock.json from there.

--- a/demo/hello-world/.gitignore
+++ b/demo/hello-world/.gitignore
@@ -7,6 +7,10 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Ignore all package manager lock files
+package-lock.json
+yarn.lock
+
 node_modules
 dist
 dist-ssr
