IIFE debugging: More demo improvements. Sadly, need to use nodemon for file watching instead of vite's built-in "vite build --watch" due to bug similar to (but not precisely same as) https://github.com/vitejs/vite/issues/2679

--- a/demo/vercel/package.json
+++ b/demo/vercel/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:iife": "yarn build:iife --watch & alive-server --port=4173 ----watch=dist/js/ --no-browser dist/",
+    "dev:iife": "nodemon --watch '../../' --ext 'js,html' --ignore ./dist/  --exec yarn build:iife & alive-server --port=4173 --watch=dist/js/ --no-browser dist/",
     "build": "rm -rf dist/ && vite build && yarn build:iife && cp iife.html dist/",
     "build:iife": "VITE_BUILD_FORMAT=iife vite build",
     "preview": "vite preview"
