--- a/demo/vercel/package.json
+++ b/demo/vercel/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "setup": "yarn global add nodemon alive-server",
     "dev": "vite",
     "dev:iife": "nodemon --watch '../../' --ext 'js,html' --ignore ./dist/  --exec yarn build:iife & alive-server --port=4173 --watch=dist/js/ --no-browser dist/",
     "build": "rm -rf dist/ && vite build && yarn build:iife && cp iife.html dist/",
@@ -12,7 +13,6 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.6",
-    "alive-server": "^1.3.0",
     "svelte": "^4.0.5",
     "vite": "^4.5.1"
   }
