Scripting the process of bumping a patch/minor version. Intentionally keeping bumping separate from publishing/pushing, in case there are issues. Also, intentionally not git pushing until after tests complete and the git repo is also updated.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "vitest": "vitest run",
     "eslint": "eslint index.js tests/*",
     "build": "tsc --emitDeclarationOnly",
-    "pub": "npm run test && npm run eslint && npm run build && npm publish"
+    "bump:patch": "npm version patch",
+    "bump:minor": "npm version minor",
+    "pub": "npm run test && npm run eslint && npm run build && git push --tags && npm publish"
   },
   "repository": {
     "type": "git",
